--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,28 @@
 plugins {
     id 'java'
+    id 'idea'
+    id 'com.github.johnrengelman.shadow' version('2.0.2')
 }
+
 
 group 'org.yiminilife'
 version '1.0-SNAPSHOT'
 
+compileJava.options.encoding('UTF-8')
+
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    // https://mvnrepository.com/artifact/io.netty/netty-all
-    compile group: 'io.netty', name: 'netty-all', version: '4.1.51.Final'
+    testImplementation 'junit:junit:4.13'
+
+    implementation 'org.projectlombok:lombok:1.18.12', 'io.netty:netty-all:4.1.51.Final'
+
+    annotationProcessor 'org.projectlombok:lombok:1.18.12'
+
+
 }
+
+
